--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat May 01 21:58:19 CEST 2021
-sdk.dir=C\:\\Users\\hsteg\\AppData\\Local\\Android\\Sdk
+#Mon May 10 11:55:29 CEST 2021
+sdk.dir=/home/helge/Android/Sdk
